# bebidas-ds-project

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
bebidas-ds-project/: README.md
bebidas-ds-project/modules/m2_lrfmv/: .gitignore
bebidas-ds-project/modules/m2_lrfmv/docs/: M2_SPEC.md
bebidas-ds-project/modules/m2_lrfmv/notebooks/outputs/m2/silver/: clients_features.csv  clients_features_eda_summary.json
docs/specs/: M2_SPEC_SQL_MEDALLION_v2.md
modules/m1_CV/: .env.example  M1_SPEC.md  app.py  main.py  prompts.py  pyproject.toml  rules.py  test_estructuracion.py  test_evaluacion.py  test_extraccion.py
modules/m1_CV/services/: matching_service.py
modules/m1_CV/tests/: test_app.py  test_main_utils.py  test_pipeline.py  test_rules.py  test_schemas.py
modules/m2_lrfmv/: .env.example  pyproject.toml
modules/m2_lrfmv/data/raw/: _ground_truth.csv  clients_raw.csv  transactions_raw.csv
modules/m2_lrfmv/docs/: M2_SPEC.md  eda_decisions.md  gold_clustering_results.md
modules/m2_lrfmv/notebooks/: 01_eda_bronze.ipynb  02_silver_clients_features_final.ipynb  03_gold_clients_clustered.ipynb  eda_graficos.ipynb
modules/m2_lrfmv/scripts/: run_kmeans.py
sql/: 07_create_m1_cv_medallion.sql  08_create_m1_informe_medallion.sql  09_simplify_m1_perfil_comercial.sql
