[project]
name = "bebidas-m1-cv"
version = "0.1.0"
description = "Modulo 1: perfilamiento comercial de preventistas B2B desde CVs"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
]

[tool.uv]
package = false
